<resources>
    <string name="app_name">vivre!</string>
    <string name="desc">Description:\n%s</string>
    <string name="error">Error:</string>
    <string name="upload">UPLOAD</string>
    <string name="gallery">GALLERY</string>
    <string name="camera_x">CAMERA</string>
    <string name="failure">Failed to fetch data</string>
    <string name="onboarding">onboarding image</string>
    <string name="detailuser">Detail User</string>
    <string name="nostory">no stories found</string>
    <string name="uploadedAt">Uploaded at: %s</string>
    <string name="signup">Don\'t have account?</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Share your tory with your precious one here. Vivre, a place where you can capture any memories and share it to the world..</string>
    <string name="title_welcome_page">Welcome to Vivre!</string>
    <string name="title_signup_page">Fill up your personal information here.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Let\'s goo..</string>
    <string name="title_login_page">Ready to share your story with the world?</string>
    <string name="name">Name</string>
    <string name="copyright">©2023 Vivre</string>
    <string name="message_main_page">Have fun!</string>
    <string name="logout">Logout</string>
    <string name="empty_email">Insert your email</string>
    <string name="empty_pass">Insert your password</string>
    <string name="place_holder_image">placeholder image</string>
    <string name="no_con">connection error</string>
    <string name="description">Description</string>
    <string name="not_recognized">account not recognized</string>
    <string name="reg_failed">register failed</string>
    <string name="register">Register</string>
    <string name="email_invalid">Please use a valid email</string>
    <string name="name_empty">Please fill the name section</string>
    <string name="email_exist">email already exist</string>
    <string name="login_succ">login success</string>
    <string name="invalid_acc">invalid account</string>
    <string name="acc_created">account created</string>
    <string name="no_img_added">please put some image first</string>
    <string name="upload_fail">failed to upload</string>
    <string name="retry">RETRY</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="map_error">failed to fetch location</string>
    <string name="fail_getlocation">can\'t get your location</string>
    <string name="upload_success">Story created successfully</string>
    <string name="language">Language</string>
    <string name="alert">Alert!</string>
    <string name="yousure">Are you sure you want to logout?</string>
    <string name="empty_desc">fill the description first</string>
    <string name="refresh">page refreshed</string>
</resources>